--- a/src/component/User/Profile.css
+++ b/src/component/User/Profile.css
@@ -1,17 +1,13 @@
 .profileContainer {
     display: flex;
-    height: 100vh;
-    width: 100vw;
     position: relative;
     top: 0%;
     left: 0%;
-    max-width: 100%;
     background-color: white;
   }
   
   .profileContainer > div {
     display: flex;
-    height: 100vh;
     width: 100vw;
     max-width: 100%;
     flex-direction: column;
@@ -26,7 +22,8 @@
   }
   
   .profileContainer > div:first-child > img {
-    width: 20vmax;
+    width: 18vmax;
+    height: 18vmax;
     border-radius: 100%;
     transition: all 0.5s;
   }
@@ -37,8 +34,8 @@
   
   .profileContainer > div:first-child > a {
     border: none;
-    background-color: tomato;
-    font: 400 1vmax "Roboto";
+    background-color: #1976d2;
+    font: 300 1vmax "Roboto";
     color: white;
     text-decoration: none;
     padding: 0.5vmax;
@@ -49,15 +46,9 @@
   }
   
   .profileContainer > div:first-child > a:hover {
-    background-color: rgb(204, 78, 56);
+    background-color:#034281;
   }
   
-  .profileContainer > div:last-child {
-    justify-content: space-evenly;
-    align-items: flex-start;
-    padding: 5vmax;
-    box-sizing: border-box;
-  }
   
   .profileContainer > div:last-child > div > h4 {
     color: black;
@@ -66,7 +57,7 @@
   
   .profileContainer > div:last-child > div > p {
     color: rgba(0, 0, 0, 0.418);
-    font: 400 1vmax cursive;
+    font: 300 1vmax cursive;
     margin: 0.2vmax;
   }
   
@@ -127,3 +118,5 @@
       margin: 2vmax 0;
     }
   }
+
+
