--- a/src/component/admin/sidebar.css
+++ b/src/component/admin/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    background-color: rgb(255, 255, 255);
+    background-color:#1976d2;
     display: flex;
     flex-direction: column;
     padding: 4rem 0;
@@ -18,13 +18,14 @@
   }
   .sidebar a {
     text-decoration: none;
-    color: rgba(0, 0, 0, 0.493);
+    color: black;
     font: 200 1rem "Roboto";
+    font-weight: bolder;
     padding: 2rem;
     transition: all 0.5s;
   }
   .sidebar a:hover {
-    color: tomato;
+    color:  white;
     transform: scale(1.1);
   }
   
@@ -36,6 +37,7 @@
     margin-right: 0.5rem;
   }
   
-  .MuiTypography-root {
-   
-  }
+
+
+
+  
